@@ -25,6 +25,7 @@
 * [L#211480] Fixed duplicated settings pages on bad translations (poy)
 * Added the title of the currently selected page in settings (poy)
 * [L#206785] Fixed a crash when a menu is owner-drawn while the desktop isn't visible (poy)
+* [L#211313] Fixed bad virtual name being loaded (thanks kulmegil)
 
 -- 0.705 2008-03-14 --
 * Several patches for better *nix compatibility of the core (thanks steven sheehy et al)
